[gd_scene load_steps=2 format=3 uid="uid://dlt31xhqteilt"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ggn5k"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ggn5k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
theme_override_colors/font_hover_pressed_color = Color(0.431865, 1, 0.400656, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0.461028, 1, 0.429352, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.568627)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "START"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
theme_override_colors/font_hover_pressed_color = Color(0.431865, 1, 0.400656, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0.461028, 1, 0.429352, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.568627)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "OPTIONS"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_colors/font_hover_pressed_color = Color(0.431865, 1, 0.400656, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0.461028, 1, 0.429352, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.568627)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "CREDITS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_colors/font_hover_pressed_color = Color(0.431865, 1, 0.400656, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(0.461028, 1, 0.429352, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.568627)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "QUIT"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "MUSIC"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 2

[node name="QuitButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "BACK"

[connection signal="button_up" from="VBoxContainer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_button_up"]
[connection signal="button_up" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="VBoxContainer2/QuitButton" to="." method="_on_quit_button_button_up"]
